--- a/projects/01_fyyur/starter_code/package.json
+++ b/projects/01_fyyur/starter_code/package.json
@@ -4,12 +4,16 @@
   "description": "Fyyur -----",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:cy:open": "npx cypress open"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^3.4.1"
+  },
+  "devDependencies": {
+    "cypress": "^12.0.2"
   }
 }
