add e2e test venue and artist

--- a/projects/01_fyyur/starter_code/package.json
+++ b/projects/01_fyyur/starter_code/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^3.4.1"
   },
   "devDependencies": {
-    "cypress": "^12.0.2"
+    "cypress": "^12.0.2",
+    "dayjs": "^1.11.7"
   }
 }
