feat(venue): delete venue with redirect and e2e tests

--- a/projects/01_fyyur/starter_code/.gitignore
+++ b/projects/01_fyyur/starter_code/.gitignore
@@ -315,3 +315,8 @@ poetry.toml
 
 
 # End of https://www.toptal.com/developers/gitignore/api/python
+
+
+# Cypress
+/tests/e2e/cypress/screenshots/*
+/tests/e2e/cypress/videos/*
